--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
 </head>
 <body>
   
-  <div class=
+ <div class="container">
+    <h1>TodoListproject</h1>
+    <div class="input-container">
+      <input type="text" id="todo-input" placeholder="Add a new task">
+      <button id="add-btn">Add</button>
+    </div>
+    <ul id="todo-list"></ul>
+  </div>
   
   
   
