--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   
  <div class="container">
-    <h1>Todo List</h1>
+    <h1>TODO LIST</h1>
     <div class="input-container">
       <input type="text" id="todo-input" placeholder="Add a new task">
       <button id="add-btn">Add</button>
