--- a/index.html
+++ b/index.html
@@ -24,7 +24,24 @@
         const todoInput = document.getElementById('todo-input');
         const todoList = document.getElementById('todo-list');
 
-        
+       addButton.addEventListener('click', function() {
+            if (todoInput.value.trim()) {
+                const listItem = document.createElement('li');
+                listItem.textContent = todoInput.value;
+                todoList.appendChild(listItem);
+                todoInput.value = '';
+
+                listItem.addEventListener('click', function() {
+                    listItem.classList.toggle('completed');
+                });
+            }
+        });
+
+        todoInput.addEventListener('keypress', function(event) {
+            if (event.key === 'Enter') {
+                addButton.click();
+            }
+        });
   
     
   </script>
